feat: Virtual Thread 전환 및 Grafana 대시보드 재구성
- Spring Boot virtual thread 활성화에 맞춰 Tomcat 스레드풀 설정 제거
- 테스트에서 newVirtualThreadPerTaskExecutor() 사용
- build.gradle에 pinning 감지 JVM 옵션 추가 (-Djdk.tracePinnedThreads=short)
- Grafana 대시보드: Tomcat Threads 패널 제거, HikariCP/Logback 패널 추가, 레이아웃 재구성
- README 부하 테스트 결과 업데이트 (Virtual Thread 기준 메트릭)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>